tests/ui/imports/ambiguous-glob-vs-expanded-extern.stderr
error: `mac` is ambiguous
  --> $DIR/ambiguous-glob-vs-expanded-extern.rs:4:21
   |
LL |   glob_vs_expanded::mac!();
   |                     ^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `mac` could refer to the macro defined here
  --> $DIR/auxiliary/glob-vs-expanded.rs:18:9
   |
LL | pub use m::*;
   |         ^
note: `mac` could also refer to the macro defined here
  --> $DIR/auxiliary/glob-vs-expanded.rs:18:9
   |
LL | pub use m::*;
   |         ^
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `mac` is ambiguous
  --> $DIR/ambiguous-glob-vs-expanded-extern.rs:4:21
   |
LL |   glob_vs_expanded::mac!();
   |                     ^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `mac` could refer to the macro defined here
  --> $DIR/auxiliary/glob-vs-expanded.rs:18:9
   |
LL | pub use m::*;
   |         ^
note: `mac` could also refer to the macro defined here
  --> $DIR/auxiliary/glob-vs-expanded.rs:18:9
   |
LL | pub use m::*;
   |         ^
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

